# reaper-goplayalong-sync

./: .gitignore  CMakeLists.txt  README.md
include/: goplayalong.h  plugin.h  process_reader.h  reaper.h  wstring_utils.h
src/: CMakeLists.txt  goplayalong.cpp  main.cpp  plugin.cpp  reaper.cpp
